--- a/api/input.yaml
+++ b/api/input.yaml
@@ -1,6 +1,6 @@
 type: file
 info:
-  summary: "The input data file."
+  summary: "The input data format."
   slots:
     layers: 
       - type: integer
@@ -15,10 +15,18 @@ info:
     obsm:
       - type: double
         name: spatial
-        description: Spatial coordinates.
+        description: X and Y coordinates of cells/spots.
         required: true
     uns:
       - type: string
         name: dataset_id
-        description: "A unique identifier for the dataset"
+        description: A unique identifier for the dataset
         required: true
+      - name: dataset_reference
+        type: string
+        description: Reference of the dataset.
+        required: false
+      - name: dataset_summary
+        type: string
+        description: Description of the dataset.
+        required: fakse
