--- a/src/dataset_loaders/allen_brain_atlas_via_pooch/config.vsh.yaml
+++ b/src/dataset_loaders/allen_brain_atlas_via_pooch/config.vsh.yaml
@@ -5,6 +5,7 @@ functionality:
       type: file
       description: Path to the output directory
       example: output.h5ad
+      direction: output
     - name: --brain_section_label
       type: string
       description: Brain section label
