--- a/src/dataset_loaders/cellxgene/config.vsh.yaml
+++ b/src/dataset_loaders/cellxgene/config.vsh.yaml
@@ -9,6 +9,7 @@ functionality:
       type: file
       description: Path to the output directory
       example: output.h5ad
+      direction: output
   resources:
     - type: python_script
       path: script.py
