--- a/src/methods/example_python/config.vsh.yaml
+++ b/src/methods/example_python/config.vsh.yaml
@@ -8,6 +8,7 @@ functionality:
     - name: --output
       type: file
       description: Path to the output directory
+      direction: output
       example: resources/results/example_python/prediction.h5ad
   resources:
     - type: python_script
