Checkout submodules in viash test phase

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -87,7 +87,9 @@ jobs:
     - uses: data-intuitive/reclaim-the-bytes@v2
     
     - uses: actions/checkout@v4
-
+      with:
+        submodules: 'recursive'
+        
     - uses: viash-io/viash-actions/setup@v5
 
     # use cache
