--- a/src/dataset_loaders/allen_brain_atlas_via_s3/config.vsh.yaml
+++ b/src/dataset_loaders/allen_brain_atlas_via_s3/config.vsh.yaml
@@ -1,5 +1,5 @@
 functionality:
-  name: allen_brain_atlas_via_pooch
+  name: allen_brain_atlas_via_s3
   arguments:
     - name: --output
       type: file
@@ -23,7 +23,7 @@ platforms:
     setup:
       - type: python
         packages:
-          - pooch
+          - boto3
           - anndata
           - pandas
           - scanpy
