fix config file

--- a/scripts/visium_hd_brain/run_cell2location.config
+++ b/scripts/visium_hd_brain/run_cell2location.config
@@ -12,12 +12,14 @@ params {
 
 }
 
+process {
   withName: buildCell2locationModel {
-      memory = { "${32 + (task.attempt * 32)} GB" }
-      time = { "${task.attempt * 4}h" }
+    memory = { "${32 + (task.attempt * 32)} GB" }
+    time = { "2h" }
   }
 
   withName: fitCell2locationModel {
-      memory = { "${32 + (task.attempt * 32)} GB" }
-      time = { "${task.attempt * 4}h" }
+    memory = { "${64 + (task.attempt * 32)} GB" }
+    time = { "${task.attempt * 4}h" }
   }
+}
