--- a/src/dataset_loaders/allen_brain_atlas_via_s3/config.vsh.yaml
+++ b/src/dataset_loaders/allen_brain_atlas_via_s3/config.vsh.yaml
@@ -14,9 +14,9 @@ functionality:
   resources:
     - type: python_script
       path: script.py
-  test_resources:
-    - type: python_script
-      path: /common-resources/component_tests/run_and_check_output.py
+  # test_resources:
+  #   - type: python_script
+  #     path: /common-resources/component_tests/run_and_check_output.py
 platforms:
   - type: docker
     image: python:3.10
