Add api files (#8)
* Add api files

* Create separate output api files for different types of methods

* move to src

* Rename api files

* Merge api file

* Rename cell_type to celltype

* Checkout submodules in viash test phase

* Update config

* Increase memory for running tests

* increase memory

* add default value for brain_section_label

* switch to s3

* use unsigned

* disable test

---------

Co-authored-by: Robrecht Cannoodt <rcannood@gmail.com>

--- a/src/dataset_loaders/allen_brain_atlas_via_s3/config.vsh.yaml
+++ b/src/dataset_loaders/allen_brain_atlas_via_s3/config.vsh.yaml
@@ -1,26 +1,31 @@
 functionality:
-  name: allen_brain_atlas_via_pooch
+  name: allen_brain_atlas_via_s3
   arguments:
     - name: --output
       type: file
       description: Path to the output directory
       example: output.h5ad
       direction: output
+      __merge__: ../../api/file_input.yaml
     - name: --brain_section_label
       type: string
-      description: Brain section label
-      example: 'Zhuang-ABCA-1.080'
+      description: A brain section label to subset the data with.
+      default: 'Zhuang-ABCA-1.080'
   resources:
     - type: python_script
       path: script.py
+  # test_resources:
+  #   - type: python_script
+  #     path: /common-resources/component_tests/run_and_check_output.py
 platforms:
   - type: docker
     image: python:3.10
     setup:
       - type: python
         packages:
-          - pooch
+          - boto3
           - anndata
           - pandas
           - scanpy
+          - pyyaml
   - type: nextflow
